2.39 "" (released xx.xx.xxxx)

  * Always use the default locale for translation of messages.
    Type: bugfix
    Changed: wc/i18n.py

2.38 "The worlds fastest Indian" (released 5.4.2006)

  * Remove literal "</script>" in embedded JavaScript files.
    Type: bugfix
    Changed: wc/js/__init__.py

  * Correctly use open file descriptor when writing new folder rules.
    Type: bugfix
    Changed: wc/webgui/context/filterconfig_html.py,
      wc/filter/rules/FolderRule.py

  * Don't use unsupported iterkeys() on form object.
    Type: bugfix
    Changed: wc/webgui/context/config_html.py

  * Make sure all methods in the HTML security filter honor that
    attribute values can be None.
    Type: bugfix
    Changed: wc/filter/html/HtmlSecurity.py

  * Always add localhost to the interface address list.
    Type: bugfix
    Changed: wc/dns/resolver.py

  * Parse <!> empty SGML comments in HTML data. And build the HTML
    parser with equivalence class compression which makes it a lot
    smaller and only a little tad slower.
    Also, literal </script> is not allowed anymore in single-line
    JavaScript comments in HTML data.
    Type: feature
    Changed: wc/HtmlParser/htmllex.[lc], wc/tests/test_parser.py

  * Avoid false positives in IE filename overflow and the
    dashes-in-hostname detection.
    Type: bugfix
    Changed: wc/filter/html/HtmlSecurity.py

  * Ignore encoding errors when recursively filtering JavaScript
    content. And make sure that the JavaScript form action attribute
    is not None.
    Type: bugfix
    Changed: wc/filter/html/JSFilter.py

  * Updated advertising filter rules.
    Type: feature
    Changed: config/*.zap

  * Only force changing of content types when the HTTP status code is 2xx,
    since errors are likely to be HTML (or at least another content-type
    than expected).
    Type: feature
    Changed: wc/proxy/{Headers,HttpServer,SslServer}.py

  * Restrict the number of attributes in HTML start tags to fix some security